# XeroInvoiceBackend

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/routes/: callback.py  health.py  login.py  upload.py
